@@ -53,11 +53,14 @@ import org.eclipse.scout.rt.server.transaction.AbstractTransactionMember;
 
 /**
  * Queue/Topic xa resource (per request)
- * 
+ *
  * @since Build 192
  *        (Extracted out of JmsService class to an autonomous class)
+ * @deprecated use org.eclipse.scout.rt.server.jms.transactional.JmsTransactionMember. Will be removed in
+ *             the N release.
  */
-@SuppressWarnings("restriction")
+@Deprecated
+@SuppressWarnings({"restriction", "deprecation"})
 public class JmsTransactionMember extends AbstractTransactionMember {
   private static final IScoutLogger LOG = ScoutLogManager.getLogger(JmsTransactionMember.class);
 
@@ -76,7 +79,7 @@ public class JmsTransactionMember extends AbstractTransactionMember {
   private boolean m_useSecurityCredential;
 
   public JmsTransactionMember(JmsJndiConfig config) {
-    super(new Long(config.getCrc()).toString());
+    super(Long.valueOf(config.getCrc()).toString());
     m_config = config;
     m_useSecurityCredential = StringUtility.hasText(config.getUserName());
   }
@@ -84,7 +87,7 @@ public class JmsTransactionMember extends AbstractTransactionMember {
   /**
    * Makes sure the message connection factory and destination (queue / topic)
    * cache is set and can be used.
-   * 
+   *
    * @throws ProcessingException
    */
   public void ensureCache() throws ProcessingException {
